Adding primitive nickserv support

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,8 @@
 bot {
   name = scalabot
   realname = mr. bot
+  nickservPass = testpass
+  email = "test@test.com"
   networks = [{
     hostname = 172.16.16.4
     port = 6667
