Primitive channel join

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,10 +1,11 @@
 bot {
-  name = scalabot
-  realname = mr. bot
+  name = sbot
+  realname = mr. sbot
   nickservPass = testpass
   email = "test@test.com"
   networks = [{
     hostname = 172.16.16.4
     port = 6667
+    channels = ["#p0x"]
   }]
 }
