Initial work on the custom migration system

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,6 +3,7 @@ bot {
   realname = mr. sbot
   nickservPass = testpass
   email = "test@test.com"
+  db = "db.sqlite"
   networks = [{
     hostname = 172.16.16.4
     port = 6667
