Using config value instead of hardcoded value

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,7 +3,8 @@ bot {
   realname = mr. sbot
   nickservPass = testpass
   email = "test@test.com"
-  db = "db.sqlite"
+  db = "db/db.sqlite"
+  migrations = "db/migrations"
   networks = [{
     hostname = 172.16.16.4
     port = 6667
