Adding the very basebones plugin system

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,7 +6,7 @@ bot {
   db = "db/db.sqlite"
   migrations = "db/migrations"
   networks = [{
-    hostname = 172.16.16.4
+    hostname = irc.node-3.net
     port = 6667
     channels = ["#p0x"]
   }]
