Creating a raw plugin

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -13,5 +13,6 @@ bot {
   plugins = [
     net.node3.scalabot.plugins.AccountPlugin
     net.node3.scalabot.plugins.ChannelPlugin
+    net.node3.scalabot.plugins.RawCommandPlugin
   ]
 }
