--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,43 @@ Session.vim
 .netrwhist
 *~
 
+### Eclipse ###
+*.pydevproject
+.metadata
+.gradle
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+
+# Eclipse Core
+.project
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# CDT-specific
+.cproject
+
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
+
+# PDT-specific
+.buildpath
+
+# sbteclipse plugin
+.target
+
+# TeXlipse plugin
+.texlipse
 
 ### SBT ###
 # Simple Build Tool
@@ -39,3 +76,4 @@ project/boot/
 .cache
 
 *.sqlite
+/bin/
