Initial work on cards plugin

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,11 +8,12 @@ bot {
   networks = [{
     hostname = irc.node-3.net
     port = 6667
-    channels = ["#p0x"]
+    channels = ["#cards2"]
   }]
   plugins = [
     net.node3.scalabot.plugins.AccountPlugin
     net.node3.scalabot.plugins.ChannelPlugin
     net.node3.scalabot.plugins.RawCommandPlugin
+    net.node3.scalabot.plugins.CardsPlugin
   ]
 }
