Adding cards parsing

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -16,4 +16,7 @@ bot {
     net.node3.scalabot.plugins.RawCommandPlugin
     net.node3.scalabot.plugins.CardsPlugin
   ]
+  cards {
+    cardsPath = "/home/nadams/git/cards/cards.json"
+  }
 }
