--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -15,6 +15,7 @@ bot {
     net.node3.scalabot.plugins.ChannelPlugin
     net.node3.scalabot.plugins.RawCommandPlugin
     net.node3.scalabot.plugins.CardsPlugin
+    net.node3.scalabot.plugins.CoinPlugin
   ]
   cards {
     cardsPath = "/home/nadams/git/cards/cards.json"
