Adding blank card support

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -18,6 +18,7 @@ bot {
     net.node3.scalabot.plugins.CoinPlugin
   ]
   cards {
-    cardsPath = "/home/nadams/git/cards/cards.json"
+    cardsPath = "/home/nick/git/cards/cards.json"
+    numBlanks = 10
   }
 }
