Fixing a bug when updating a player's point score

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,7 +6,7 @@ bot {
   db = "db/db.sqlite"
   migrations = "db/migrations"
   networks = [{
-    hostname = irc.node-3.net
+    hostname = cygnus.node-3.net
     port = 6667
     channels = ["#cards2"]
   }]
@@ -18,7 +18,7 @@ bot {
     net.node3.scalabot.plugins.CoinPlugin
   ]
   cards {
-    cardsPath = "/home/nick/git/cards/cards.json"
+    cardsPath = "/home/nadams/git/cards/cards.json"
     numBlanks = 10
   }
 }
