--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,8 +3,7 @@ bot {
   realname = mr. sbot
   nickservPass = testpass
   email = "test@test.com"
-  db = "db/db.sqlite"
-  migrations = "db/migrations"
+  db = "db.sqlite"
   networks = [{
     hostname = cygnus.node-3.net
     port = 6667
