--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -16,6 +16,7 @@ bot {
     net.node3.scalabot.plugins.CardsPlugin
     net.node3.scalabot.plugins.CoinPlugin
     net.node3.scalabot.plugins.UrlTitlePlugin
+    net.node3.scalabot.plugins.WeatherPlugin
   ]
   cards {
     cardsPath = "/home/nadams/git/cards/cards.json"
