Adding default config for weather plugin

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -22,4 +22,8 @@ bot {
     cardsPath = "/home/nadams/git/cards/cards.json"
     numBlanks = 10
   }
+  weather {
+    timeout = 15
+    commandPrefix = "!"
+  }
 }
