Using a packaging system

--- a/src/universal/conf/application.conf
+++ b/src/universal/conf/application.conf
@@ -3,7 +3,7 @@ bot {
   realname = mr. sbot
   nickservPass = testpass
   email = "test@test.com"
-  db = "db.sqlite"
+  db = sbot.sqlite
   networks = [{
     hostname = cygnus.node-3.net
     port = 6667
