--- a/src/universal/conf/application.conf
+++ b/src/universal/conf/application.conf
@@ -3,7 +3,11 @@ bot {
   realname = mr. sbot
   nickservPass = testpass
   email = "test@test.com"
-  db = sbot.sqlite
+  db = {
+    driver = "org.postgresql.Driver"
+    url = "jdbc:postgresql://maven.deneb.local/poprocks?user=poprocks&password=0e4ad33c485246d4435aabf7a7cd7f05"
+    migrations = "/home/nick/git/scala-bot/src/universal/db"
+  }
   networks = [{
     hostname = cygnus.node-3.net
     port = 6667
