Setting default values

--- a/src/universal/conf/application.conf
+++ b/src/universal/conf/application.conf
@@ -5,8 +5,8 @@ bot {
   email = "test@test.com"
   db = {
     driver = "org.postgresql.Driver"
-    url = "jdbc:postgresql://maven.deneb.local/poprocks?user=poprocks&password=0e4ad33c485246d4435aabf7a7cd7f05"
-    migrations = "/home/nick/git/scala-bot/src/universal/db"
+    url = "jdbc:postgresql://localhost/sbot"
+    migrations = "${app_home}/src/universal/db"
   }
   networks = [{
     hostname = cygnus.node-3.net
